--- a/coba.ipynb
+++ b/coba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b8cb8e94",
    "metadata": {},
    "outputs": [
@@ -27,182 +27,267 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Nama</th>\n",
+       "      <th>Produk</th>\n",
+       "      <th>Pelanggan</th>\n",
        "      <th>Ulasan</th>\n",
+       "      <th>Rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>Q***s</td>\n",
        "      <td>Celananya bagus, recommendedlah.\\nharga murah ...</td>\n",
+       "      <td>bintang 4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>T***j</td>\n",
        "      <td>Pengiriman cepat dan aman</td>\n",
+       "      <td>bintang 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>X***e</td>\n",
        "      <td>Bahan ny panas</td>\n",
+       "      <td>bintang 2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>C***t</td>\n",
        "      <td>oke</td>\n",
+       "      <td>bintang 3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Celana Pendek Boardshort Pria NOVA Twill 100% ...</td>\n",
        "      <td>S***d</td>\n",
        "      <td>Bagus tebal</td>\n",
+       "      <td>bintang 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>L***y</td>\n",
        "      <td>gak sesuai</td>\n",
+       "      <td>bintang 1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>F***b</td>\n",
        "      <td>Best sih, sesuai dengan harga, bahan bagus, ja...</td>\n",
+       "      <td>bintang 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>A***q</td>\n",
        "      <td>lumayan tebel</td>\n",
+       "      <td>bintang 4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>O***e</td>\n",
        "      <td>Paket aku di terima oleh orang lain</td>\n",
+       "      <td>bintang 1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>Q***s</td>\n",
        "      <td>Celananya bagus, recommendedlah.\\nharga murah ...</td>\n",
+       "      <td>bintang 4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>T***j</td>\n",
        "      <td>Pengiriman cepat dan aman</td>\n",
+       "      <td>bintang 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>X***e</td>\n",
        "      <td>Bahan ny panas</td>\n",
+       "      <td>bintang 2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>C***t</td>\n",
        "      <td>oke</td>\n",
+       "      <td>bintang 3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
+       "      <td>Celana Pendek Boardshort Pria NOVA Twill 100% ...</td>\n",
        "      <td>S***d</td>\n",
        "      <td>Bagus tebal</td>\n",
+       "      <td>bintang 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>L***y</td>\n",
        "      <td>gak sesuai</td>\n",
+       "      <td>bintang 1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>F***b</td>\n",
        "      <td>Best sih, sesuai dengan harga, bahan bagus, ja...</td>\n",
+       "      <td>bintang 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>A***q</td>\n",
        "      <td>lumayan tebel</td>\n",
+       "      <td>bintang 4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>O***e</td>\n",
        "      <td>Paket aku di terima oleh orang lain</td>\n",
+       "      <td>bintang 1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>Q***s</td>\n",
        "      <td>Celananya bagus, recommendedlah.\\nharga murah ...</td>\n",
+       "      <td>bintang 4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>T***j</td>\n",
        "      <td>Pengiriman cepat dan aman</td>\n",
+       "      <td>bintang 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>X***e</td>\n",
        "      <td>Bahan ny panas</td>\n",
+       "      <td>bintang 2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>C***t</td>\n",
        "      <td>oke</td>\n",
+       "      <td>bintang 3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
+       "      <td>Celana Pendek Boardshort Pria NOVA Twill 100% ...</td>\n",
        "      <td>S***d</td>\n",
        "      <td>Bagus tebal</td>\n",
+       "      <td>bintang 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>L***y</td>\n",
        "      <td>gak sesuai</td>\n",
+       "      <td>bintang 1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>F***b</td>\n",
        "      <td>Best sih, sesuai dengan harga, bahan bagus, ja...</td>\n",
+       "      <td>bintang 5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>A***q</td>\n",
        "      <td>lumayan tebel</td>\n",
+       "      <td>bintang 4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
+       "      <td>PAKET 3 PCS Celana Pendek Pria Distro Boardsho...</td>\n",
        "      <td>O***e</td>\n",
        "      <td>Paket aku di terima oleh orang lain</td>\n",
+       "      <td>bintang 1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Nama                                             Ulasan\n",
-       "0   Q***s  Celananya bagus, recommendedlah.\\nharga murah ...\n",
-       "1   T***j                          Pengiriman cepat dan aman\n",
-       "2   X***e                                     Bahan ny panas\n",
-       "3   C***t                                                oke\n",
-       "4   S***d                                        Bagus tebal\n",
-       "5   L***y                                         gak sesuai\n",
-       "6   F***b  Best sih, sesuai dengan harga, bahan bagus, ja...\n",
-       "7   A***q                                      lumayan tebel\n",
-       "8   O***e                Paket aku di terima oleh orang lain\n",
-       "9   Q***s  Celananya bagus, recommendedlah.\\nharga murah ...\n",
-       "10  T***j                          Pengiriman cepat dan aman\n",
-       "11  X***e                                     Bahan ny panas\n",
-       "12  C***t                                                oke\n",
-       "13  S***d                                        Bagus tebal\n",
-       "14  L***y                                         gak sesuai\n",
-       "15  F***b  Best sih, sesuai dengan harga, bahan bagus, ja...\n",
-       "16  A***q                                      lumayan tebel\n",
-       "17  O***e                Paket aku di terima oleh orang lain\n",
-       "18  Q***s  Celananya bagus, recommendedlah.\\nharga murah ...\n",
-       "19  T***j                          Pengiriman cepat dan aman\n",
-       "20  X***e                                     Bahan ny panas\n",
-       "21  C***t                                                oke\n",
-       "22  S***d                                        Bagus tebal\n",
-       "23  L***y                                         gak sesuai\n",
-       "24  F***b  Best sih, sesuai dengan harga, bahan bagus, ja...\n",
-       "25  A***q                                      lumayan tebel\n",
-       "26  O***e                Paket aku di terima oleh orang lain"
+       "                                               Produk Pelanggan  \\\n",
+       "0   PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     Q***s   \n",
+       "1   PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     T***j   \n",
+       "2   PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     X***e   \n",
+       "3   PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     C***t   \n",
+       "4   Celana Pendek Boardshort Pria NOVA Twill 100% ...     S***d   \n",
+       "5   PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     L***y   \n",
+       "6   PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     F***b   \n",
+       "7   PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     A***q   \n",
+       "8   PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     O***e   \n",
+       "9   PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     Q***s   \n",
+       "10  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     T***j   \n",
+       "11  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     X***e   \n",
+       "12  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     C***t   \n",
+       "13  Celana Pendek Boardshort Pria NOVA Twill 100% ...     S***d   \n",
+       "14  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     L***y   \n",
+       "15  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     F***b   \n",
+       "16  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     A***q   \n",
+       "17  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     O***e   \n",
+       "18  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     Q***s   \n",
+       "19  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     T***j   \n",
+       "20  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     X***e   \n",
+       "21  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     C***t   \n",
+       "22  Celana Pendek Boardshort Pria NOVA Twill 100% ...     S***d   \n",
+       "23  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     L***y   \n",
+       "24  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     F***b   \n",
+       "25  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     A***q   \n",
+       "26  PAKET 3 PCS Celana Pendek Pria Distro Boardsho...     O***e   \n",
+       "\n",
+       "                                               Ulasan     Rating  \n",
+       "0   Celananya bagus, recommendedlah.\\nharga murah ...  bintang 4  \n",
+       "1                           Pengiriman cepat dan aman  bintang 5  \n",
+       "2                                      Bahan ny panas  bintang 2  \n",
+       "3                                                 oke  bintang 3  \n",
+       "4                                         Bagus tebal  bintang 5  \n",
+       "5                                          gak sesuai  bintang 1  \n",
+       "6   Best sih, sesuai dengan harga, bahan bagus, ja...  bintang 5  \n",
+       "7                                       lumayan tebel  bintang 4  \n",
+       "8                 Paket aku di terima oleh orang lain  bintang 1  \n",
+       "9   Celananya bagus, recommendedlah.\\nharga murah ...  bintang 4  \n",
+       "10                          Pengiriman cepat dan aman  bintang 5  \n",
+       "11                                     Bahan ny panas  bintang 2  \n",
+       "12                                                oke  bintang 3  \n",
+       "13                                        Bagus tebal  bintang 5  \n",
+       "14                                         gak sesuai  bintang 1  \n",
+       "15  Best sih, sesuai dengan harga, bahan bagus, ja...  bintang 5  \n",
+       "16                                      lumayan tebel  bintang 4  \n",
+       "17                Paket aku di terima oleh orang lain  bintang 1  \n",
+       "18  Celananya bagus, recommendedlah.\\nharga murah ...  bintang 4  \n",
+       "19                          Pengiriman cepat dan aman  bintang 5  \n",
+       "20                                     Bahan ny panas  bintang 2  \n",
+       "21                                                oke  bintang 3  \n",
+       "22                                        Bagus tebal  bintang 5  \n",
+       "23                                         gak sesuai  bintang 1  \n",
+       "24  Best sih, sesuai dengan harga, bahan bagus, ja...  bintang 5  \n",
+       "25                                      lumayan tebel  bintang 4  \n",
+       "26                Paket aku di terima oleh orang lain  bintang 1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
